--- a/gramophone/src/main/resources/templates/track-info.html
+++ b/gramophone/src/main/resources/templates/track-info.html
@@ -34,7 +34,7 @@
     <div class="container">
         <div class="track-info">
             <div class="row">
-                <div class="col-12"><h2 th:text="${track.title}"></h2></div>
+                <div class="col-12"><h2 id="track-like" th:text="${track.title}"></h2></div>
             </div>
             <div class="row">
                 <div class="col-4 word-author">
